fix: adjusted scoreboard sizes for better readability

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,7 @@ body {
   width: min-content;
   max-width: 1200px;
 }
+
+html {
+  font-size: 20px;
+}
